# cypilot

./: .env  .gitignore  .pylintrc  MANIFEST.in  README.md  setup.cfg  setup.py
src/cypilot/: autopilot.py  boatimu.py  bufferedsocket.py  client.py  gpsd.py  kbhit.py  nmea.py  nonblockingpipe.py  perf.py  pilot_path.py  pilot_values.py  pilot_version.py  pyjson.py  quaternion.py  resolv.py  rudder.py  sensors.py  serials.py  server.py  servo.py  signalk.py  tacking.py  vector.py
src/cypilot/arduino_servo/: arduino_servo.cpp  arduino_servo.h  arduino_servo.i  arduino_servo_eeprom.cpp  arduino_servo_eeprom.h
src/cypilot/devices/: ble_calypso.py  btle-scan.py  config_bno085.py  cypilot_bno085.py  pilot_imu.py
src/cypilot/linebuffer/: linebuffer.cpp  linebuffer.h  linebuffer.i  linebuffer.py  linebuffer_wrap.cpp
src/cypilot/logger/: logger.py
src/cypilot/pilots/: __init__.py  autotune.py  learning.py  pilot.py  simple.py
src/cypilot/pilots/learningmanager/: clean_logs.py  learninggui.py  learninggui_v2.py  learningmanager.py  learningmanager_v2.py
src/cypilot/rc/: receiver.py
src/cypilot/ui/: Sailboat.mtl  autotune_wizard.py  dashboard.py  icon-cya.py  qt_autopilot.py  qt_autopilot_calibration.py  qt_autopilot_client.py  qt_autopilot_control.py
src/cypilot/web/: README  cypilot_web.wsgi  web.py
src/cypilot/web/static/: cypilot_control.js  dark_theme.css
src/cypilot/web/templates/: index.html
src/cypilot_init/: cypilot_init.py
src/cypilot_init/scripts/: cypilot-init-1-2.sh  cypilot-init-1-3.sh  cypilot-init-2-1.sh  cypilot-init-2-2.sh  install-reboot.sh
src/cypilot_init/scripts/avrcan/: can-boot.sh  can-flash.sh  nmea2000gw.hex  readme.txt
src/cypilot_init/scripts/cyspwr/: motor-cys.hex  pwr-flash.sh
src/cypilot_init/scripts/files/pi4-64/boot/: config-cysbox-v1.txt  config-cysbox-v3.txt
src/cypilot_init/scripts/files/pi4-64/etc/: rc.local
src/cypilot_init/scripts/files/pi4-64/git/: config
src/cypilot_init/scripts/files/pi4-64/home/.config/autostart/: ApRun.desktop
src/cypilot_init/scripts/files/pi4-64/home/.cypilot/: autoexec.cys  boat_config.json  cypilot.conf  cypilot_calypso.conf  cypilot_client.conf  cypilot_sensors.conf  cypilot_sensors.with_signalk_and_ble.conf  cypilot_sensors.without_signalk_and_ble.conf  cypilot_serial.conf  daemon.cys  interpolate_polar_empty.csv  polar_empty.csv  sailect.sailselect  signalk-token
(+19 files in other folders)
