[metadata]
name = cypilot
version = attr: cypilot.pilot_version.__version__
author = CYS
author_email = cf@cybele-sailing.com
url = https://cybele-sailing.com
description = CyPilot Sailing Autopilot
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sailing,autopilot,raspberry,cysbox,cyspwr
license = GPLv3
classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
# packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = find_namespace:
cmdclass =
    build = setup.build_alt_order
install_requires =
# list from pipreqs:
	Adafruit_Blinka==8.2.0
	adafruit_circuitpython_busdevice==5.2.3
	adafruit_circuitpython_rfm69==2.1.12
	adafruit_extended_bus==1.0.2
	Flask==1.1.2
	Flask_SocketIO==4.3.2
	jinja2==2.11.3
	numpy==1.19.5
	pandas==1.4.4
	Pillow==9.3.0
	pure_predict==0.0.4
	PyOpenGL==3.1.6
	pyglet==1.5.26
	pyserial==3.5
	PyWavefront==1.3.3
	requests==2.25.1
	scikit_learn==1.2.0
	scipy==1.9.1
	ujson==5.4.0
	orjson==3.9.5
	websocket_client==1.4.2
	Werkzeug==1.0.1
	zeroconf==0.39.0
# added some packages:
	swig==3.0.12
	desktop-entry-lib==2.2
	console-menu==0.7.1
# some packages require glib2 to be installed
# so the installation will be done later by the cypilot init script
# note: bluepy is required to support BlueTooth LE sensors (anemometer, ...)
#	bluepy==1.3.0


[options.entry_points]
console_scripts =
	cypilot_init=cypilot_init.cypilot_init:init_pi_menu
	autopilot=cypilot.ui.qt_autopilot_control:qt_main
	autopilot_web=cypilot.web.web.py:main
	cypilot=cypilot.autopilot:autopilot_main
	cypilot_boatimu=cypilot.boatimu:boatimu_main
	cypilot_sensors=cypilot.sensors:sensors_main
	cypilot_servo=cypilot.servo:servo_main
	cypilot_calibration=cypilot.ui.qt_autopilot_calibration:qt_main
	cypilot_config=cypilot.ui.qt_autopilot_client:qt_main
	cypilot_version=pilot_path:pilot_path_main
	cypilot_bno085=cypilot.devices.config_bno085:bno085_main
	cypilot_ble=cypilot.devices.ble_calypso:uwble_main
	cypilot_rc=cypilot.rc.receiver:remote_main

[options.packages.find]
where=src

[options.extras_require]

[options.package_data]
cypilot = [**/*.obj,**/*.mtl,**/*.txt,**/*.png]
cypilot_install = **/*
* = README.md

